@@ -188,23 +188,25 @@ sub __TOKENIZER__on_char {
 		return $t->{class}->__TOKENIZER__commit( $t );
 	}
 
-	# Check for a quote like operator
 	my $word = $t->{token}->{content};
-	if ( $QUOTELIKE{$word} and ! $class->__TOKENIZER__literal($t, $word, $tokens) ) {
-		$t->{class} = $t->{token}->set_class( $QUOTELIKE{$word} );
-		return $t->{class}->__TOKENIZER__on_char( $t );
-	}
+	if ( $KEYWORDS{$word} ) {
+		# Check for a Perl keyword that is forced to be a normal word instead
+		if ( $t->__current_token_is_forced_word ) {
+			$t->{class} = $t->{token}->set_class( 'Word' );
+			return $t->{class}->__TOKENIZER__on_char( $t );
+		}
 
-	# Check for a Perl keyword that is forced to be a normal word instead
-	if ( $KEYWORDS{$word} and $class->__TOKENIZER__literal($t, $word, $tokens) ) {
-		$t->{class} = $t->{token}->set_class( 'Word' );
-		return $t->{class}->__TOKENIZER__on_char( $t );
-	}
+		# Check for a quote like operator. %QUOTELIKE must be subset of %KEYWORDS
+		if ( $QUOTELIKE{$word} ) {
+			$t->{class} = $t->{token}->set_class( $QUOTELIKE{$word} );
+			return $t->{class}->__TOKENIZER__on_char( $t );
+		}
 
-	# Or one of the word operators
-	if ( $OPERATOR{$word} and ! $class->__TOKENIZER__literal($t, $word, $tokens) ) {
-	 	$t->{class} = $t->{token}->set_class( 'Operator' );
- 		return $t->_finalize_token->__TOKENIZER__on_char( $t );
+		# Or one of the word operators. %OPERATOR must be subset of %KEYWORDS
+		if ( $OPERATOR{$word} ) {
+			$t->{class} = $t->{token}->set_class( 'Operator' );
+			return $t->_finalize_token->__TOKENIZER__on_char( $t );
+		}
 	}
 
 	# Unless this is a simple identifier, at this point
@@ -319,7 +321,7 @@ sub __TOKENIZER__commit {
 		# Since its not a simple identifier...
 		$token_class = 'Word';
 
-	} elsif ( $class->__TOKENIZER__literal($t, $word, $tokens) ) {
+	} elsif ( $KEYWORDS{$word} and $t->__current_token_is_forced_word ) {
 		$token_class = 'Word';
 
 	} elsif ( $QUOTELIKE{$word} ) {
@@ -367,45 +369,6 @@ sub __TOKENIZER__commit {
 		return 0;
 	}
 	$t->_finalize_token->__TOKENIZER__on_char($t);
-}
-
-# Is the word in a "forced" context, and thus cannot be either an
-# operator or a quote-like thing. This version is only useful
-# during tokenization.
-sub __TOKENIZER__literal {
-	my ($class, $t, $word, $tokens) = @_;
-
-	# Is this a forced-word context?
-	# i.e. Would normally be seen as an operator.
-	return '' if !$KEYWORDS{$word};
-
-	# Check the cases when we have previous tokens
-	pos $t->{line} = $t->{line_cursor};
-	if ( $tokens ) {
-		my $token = $tokens->[0] or return '';
-
-		# We are forced if we are a method name
-		return 1 if $token->{content} eq '->';
-
-		# We are forced if we are a sub name or a package name
-		return 1 if $token->isa('PPI::Token::Word') and
-			( $token->{content} eq 'sub' or $token->{content} eq 'package' );
-
-		# If we are contained in a pair of curly braces,
-		# we are probably a bareword hash key
-		if ( $token->{content} eq '{' and $t->{line} =~ /\G\s*\}/gc ) {
-			return 1;
-		}
-	}
-
-	# In addition, if the word is followed by => it is probably
-	# also actually a word and not a regex.
-	if ( $t->{line} =~ /\G\s*=>/gc ) {
-		return 1;
-	}
-
-	# Otherwise we probably aren't forced
-	'';
 }
 
 1;
