@@ -11,6 +11,8 @@ Revision history for Perl extension PPI
 	  (GitHub #75) (MOREGAN)
 	- Prevent package names like 'v10' from being parsed as version
 	  strings (GitHub #76) (MOREGAN)
+	- Prevent sub names like 'v10' from being parsed as version
+	  strings (RT #74527, GitHub #65) (JAE, MOREGAN)
 
 1.220 Tue 11 Nov 2014
 	Summary:
